# helix-editor-playground

./: README.md  asset-manifest.json  index.html  package-lock.json
.github/workflows/: build_and_publish_container.yml
backend/: Cargo.toml  Containerfile
backend/src/: error.rs  helix.rs  main.rs  terminal.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Editor.tsx  index.css
helix/: Containerfile
public/: index.html
src/: App.css  App.tsx  AttachAddon.ts  Editor.css  Editor.tsx  Watcher.tsx  index.css
static/css/: main.055a13ed.css  main.055a13ed.css.map  main.07252492.css  main.07252492.css.map  main.1dcd5222.css  main.1dcd5222.css.map  main.60af1ab7.css  main.60af1ab7.css.map  main.b245c09b.css  main.b245c09b.css.map  main.c9de131c.css  main.c9de131c.css.map  main.ca268baa.css  main.ca268baa.css.map
static/js/: main.036e6771.js  main.036e6771.js.map  main.0d059952.js  main.0d059952.js.map  main.1d388a4f.js  main.1d388a4f.js.map  main.2261a651.js  main.2261a651.js.map  main.3919725b.js  main.3919725b.js.map  main.474c5c1b.js  main.474c5c1b.js.map  main.47bc78ae.js  main.47bc78ae.js.map  main.504d1126.js  main.504d1126.js.map  main.504e19fd.js  main.504e19fd.js.map  main.5213fb61.js  main.5213fb61.js.map  main.584f7098.js  main.584f7098.js.map  main.5973bffe.js  main.5973bffe.js.map  main.5b787818.js  main.5b787818.js.map  main.5cbe8cc0.js  main.5cbe8cc0.js.map  main.63d9126a.js  main.63d9126a.js.map  main.6743a3ac.js  main.6743a3ac.js.map  main.7748c7a5.js  main.7748c7a5.js.map  (+8 more)
